tests/elab/err/non_fun_call.pion
let f = false;

let x = f(false);
